--- a/phantomgames/Search/SearchGame.storyboard
+++ b/phantomgames/Search/SearchGame.storyboard
@@ -28,6 +28,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="7AF-pa-SnO" kind="showDetail" identifier="GameDetailScreenSegue" id="tHF-e7-oXI"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -47,7 +50,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130" y="-2"/>
+            <point key="canvasLocation" x="129.00763358778624" y="-2.1126760563380285"/>
+        </scene>
+        <!--GameDetailStoryboard-->
+        <scene sceneID="vBu-ny-LDl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="GameDetailStoryboard" id="7AF-pa-SnO" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rt5-bz-lb6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="951" y="-55"/>
         </scene>
     </scenes>
     <resources>
