--- a/phantomgames/Home/HomeScreen.storyboard
+++ b/phantomgames/Home/HomeScreen.storyboard
@@ -72,8 +72,8 @@
                                         <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                         <size key="customSize" width="339" height="213"/>
                                         <connections>
-                                            <outlet property="Gametitle" destination="0Br-Fh-0k3" id="KzG-7h-thK"/>
                                             <outlet property="apiImage" destination="taL-qc-1AB" id="w1M-Wd-15y"/>
+                                            <outlet property="gametitle" destination="0Br-Fh-0k3" id="KzG-7h-thK"/>
                                             <segue destination="p5h-c3-Vkl" kind="showDetail" identifier="GameDetailScreenSegue" id="uq8-ia-LA6"/>
                                         </connections>
                                     </collectionViewCell>
